[package]
name = "ebisu"
version = "0.2.1"
edition = "2018"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
getset = "0.1.1"
figlet-rs = "0.1.3"
log = "0.4"
serde_yaml = "0.8"
structopt = "0.3.22"
http-api-problem = { version ="0.50.2", features = ["hyper"]}
validator = { version = "0.12", features = ["derive"] }
tracing-subscriber = "0.2"
tracing = "0.1"
axum = "0.2.5"
tower-http = { version = "0.1", features = ["trace"] }
tower = { version = "0.4", features = ["full"] }
humantime-serde = "1.0.1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = 'abort'
